--- a/index.html
+++ b/index.html
@@ -1,40 +1,36 @@
+html
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Your Name - Resume</title>
+    <title>Santhosh Varma's Resume</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Your Name</h1>
-        <p>Web Developer</p>
-    </header>
-    
-    <section id="experience">
-        <h2>Experience</h2>
-        <p>Company XYZ - Web Developer</p>
-        <p>Date - Present</p>
-    </section>
-
-    <section id="education">
-        <h2>Education</h2>
-        <p>University ABC - Computer Science</p>
-        <p>Graduation Date</p>
-    </section>
-
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-        </ul>
-    </section>
-
-    <footer>
-        <p>Contact: your@email.com</p>
-    </footer>
+    <div class="resume">
+        <div class="header">
+            <h1>Santhosh Varma Thamishetty</h1>
+            <p>Email: santhosh.varmat64@gmail.com | Phone: +1 (416)-831-9104</p>
+        </div>
+        <div class="section">
+            <h2>Experience</h2>
+            <!-- Add your experiences here -->
+        </div>
+        <div class="section">
+            <h2>Education</h2>
+            <!-- Add your education details here -->
+        </div>
+        <div class="section">
+            <h2>Academic Projects</h2>
+            <!-- List your academic projects here -->
+        </div>
+        <div class="section">
+            <h2>Technologies</h2>
+            <!-- List technologies you are familiar with here -->
+        </div>
+        <div class="section">
+            <h2>Accomplishments</h2>
+            <!-- List your accomplishments here -->
+        </div>
+    </div>
 </body>
 </html>
