--- a/sec1.html
+++ b/sec1.html
@@ -221,10 +221,9 @@
                 <h1><span>Hi, It's Me</span> <br> I'm <span style="color:#00E8F8;">Aura</span></h1>
                 <p>Lorem Ipsum is simply dummy text of the printing <br> and typesetting industry. </p>
                 <div class="social">
-                    <a href="https://github.com/bikashdev01/"><i class="bi bi-github"></i></a>
-                    <a href="https://t.me/web_devs_i"><i class="bi bi-telegram"></i></a>
-                    <a href="https://www.linkedin.com/in/vikash-web-dev/"><i class="bi bi-linkedin"></i></a>
-                    <a href="https://www.youtube.com/@Web_Devs__"><i class="bi bi-youtube"></i></a>
+                    <a href="https://github.com/SanthoshVarmaThamishetty"><i class="bi bi-github"></i></a>
+                    <a href="https://www.instagram.com/santhosh_varma?igsh=MWJqcXc3NXRoM3V3ag%3D%3D&utm_source=qr"><i class="bi bi-instagram"></i></a>
+                    <a href="http://linkedin.com/in/santhosh-varma-a59a4a1b0"><i class="bi bi-linkedin"></i></a>
                 </div>
             </div>
             <div class="images">
