--- a/sec1.html
+++ b/sec1.html
@@ -1,4 +1,4 @@
-<!---Log-in
+<!---Log-in -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -231,7 +231,6 @@
             </div>
         </div>
     </section>
--->
 
 </body>
 
