--- a/sec4.html
+++ b/sec4.html
@@ -1,4 +1,4 @@
-<!--Dark new color-->
+<!--Dark new color
 <!DOCTYPE html>
 <html lang="en">
 
@@ -61,3 +61,4 @@
 <script src="js/index.js"></script>
 </body>
 </html>
+-->
