--- a/sec1.html
+++ b/sec1.html
@@ -218,8 +218,8 @@
     <section>
         <div class="main">
             <div class="detail"><!---Sarah -->
-                <h1><span>Hi, It's Me</span> <br> I'm <span style="color:#00E8F8;">Aura</span></h1>
-                <p>Lorem Ipsum is simply dummy text of the printing <br> and typesetting industry. </p>
+                <h1><span>Hi,</span> <br> I'm <span style="color:#00E8F8;">Santhosh Varma Thamishetty</span></h1>
+                <p> I'm a professional Software Developer.</p>
                 <div class="social">
                     <a href="https://github.com/SanthoshVarmaThamishetty"><i class="bi bi-github"></i></a>
                     <a href="https://www.instagram.com/santhosh_varma?igsh=MWJqcXc3NXRoM3V3ag%3D%3D&utm_source=qr"><i class="bi bi-instagram"></i></a>
