--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <div class="social">
                     <a href="https://github.com/SanthoshVarmaThamishetty"><i class="bi bi-github"></i></a>
                     <a href="https://www.instagram.com/santhosh_varma?igsh=MWJqcXc3NXRoM3V3ag%3D%3D&utm_source=qr"><i class="bi bi-instagram"></i></a>
-                    <a href="http://linkedin.com/in/santhosh-varma-a59a4a1b0"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/santhosh-varma-a59a4a1b0?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i class="bi bi-linkedin"></i></a>
                 </div>
             </div>
             <div class="images">
