--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
     <section>
         <div class="main">
-            <div class="detail"><!---Sarah -->
+            <div class="detail">
                 <h1><span>Hi,</span> <br> I'm <span style="color:#00E8F8;">Santhosh Varma Thamishetty</span></h1>
                 <p> I'm a professional Software Developer.</p>
                 <div class="social">
