--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 </div>
             </div>
             <div class="images">
-                <img src="pic.jpeg" alt="" width="100%">
+                <img src="0V5A9648.JPG" alt="" width="100%">
             </div>
         </div>
     </section>
