--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <a href="#" class="active">Home</a>
             <a href="#">About</a>
             <a href="#">Skills</a>
-            <a href="#">Experience</a>
+            <a href="#">Projects</a>
             <a href="#">Contact</a>
         </nav>
     </header>
