--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <div class="main">
             <div class="detail">
                 <h1><span>Hi,</span> <br> I'm <span style="color:#00E8F8;">Santhosh Varma Thamishetty</span></h1>
-                <p> I'm a professional Software Developer.</p>
+                <p> A Cogitative Software Developer.</p>
                 <div class="social">
                     <a href="https://github.com/SanthoshVarmaThamishetty"><i class="bi bi-github"></i></a>
                     <a href="https://www.instagram.com/santhosh_varma?igsh=MWJqcXc3NXRoM3V3ag%3D%3D&utm_source=qr"><i class="bi bi-instagram"></i></a>
@@ -227,7 +227,7 @@
                 </div>
             </div>
             <div class="images">
-                <img src="0V5A9648.JPG" alt="" width="100%">
+                <img src="" alt="" width="100%">
             </div>
         </div>
     </section>
