--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         }
 
         .images {
-            background-image: url(/img/graph5.png);
+            background-image: url('5590457.jpg');
             background-repeat: no-repeat;
             background-position: 0 -75px;
             -webkit-box-shadow: 0 10px 10px -10px #000000;
@@ -207,7 +207,7 @@
         </label>
         <nav>
             <a href="#" class="active">Home</a>
-            <a href="#">About</a>
+            <a href="Sec2.html">About</a>
             <a href="#">Skills</a>
             <a href="#">Projects</a>
             <a href="#">Contact</a>
@@ -227,7 +227,7 @@
                 </div>
             </div>
             <div class="images">
-                <img src="" alt="" width="100%">
+                <img src="final.jpeg" alt="" width="100%">
             </div>
         </div>
     </section>
