--- a/Sec2.html
+++ b/Sec2.html
@@ -428,13 +428,13 @@ li a:hover {
                     </div>
                 </div>
                 <div class="images">
-                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhwX1hNs1uTxT4esqcM-g4cIPSSqGfCotsrSqPkI8aQMNoJMxECIOqHeVAPlGsSD6uEn7K5Fv_9m-vVdt4kaig7dInalmeBEnMUMbcFloJX3-y_lh6J8zz-PkIENB_1k8iAx5YEdP4FlBD0_U_JWbZC9TkP70Yd71hxULL5SbwvsZIen4_dtOOltgBpcGA/s1600/img_1.png" alt="" class="img-w">
+                    <img src="final.jpeg" alt="" class="img-w">
                 </div>
             </div>
             <div class="detail">
                 <h3>Hi, I'm</h3>
-                <h1><span style="color:#f9532d;">Olive</span> Hicks</h1>
-                <p>I'm a professional Web Developer. Our Main Goal to help & Satisficed the Local & Global Clients by web development solutions</p>
+                <h1><span style="color:#f9532d;"> Santhosh Varma Thamishetty</h1>
+                <p>A Cogitative Software Developer</p>
             <button>Contact Us</button>
             </div>
         </div>
@@ -444,4 +444,4 @@ li a:hover {
     console.log();
 </script>
 </html>
- -->
+ 
