--- a/Sec2.html
+++ b/Sec2.html
@@ -398,7 +398,7 @@ li a:hover {
             </label>
             <ul>
                 <li><a href="#" class="active" style="--navAni:1">Home</a></li>
-                <a href="index.html">About</a>
+                <a href="index.html">Home</a>
                 <li><a href="#" style="--navAni:2">About</a></li>
                 <li><a href="#" style="--navAni:3">Skills</a></li>
                 <li><a href="#" style="--navAni:4">Portfolio</a></li>
