--- a/index.html
+++ b/index.html
@@ -227,7 +227,8 @@
                 </div>
             </div>
             <div class="images">
-                <img src="final.jpeg" alt="" width="100%">
+                <img src="final.jpeg" alt="" width="100%" class="img-w">
+                </div>
             </div>
         </div>
     </section>
