--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         }
 
         .images {
-            background-image: url('5590457.jpg');
+            background-image: url('');
             background-repeat: no-repeat;
             background-position: 0 -75px;
             -webkit-box-shadow: 0 10px 10px -10px #000000;
