--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 </div>
             </div>
             <div class="images">
-                <img src="final.jpeg" alt="" width="100%" class="img-w">
+                <img src="final.jpeg" alt="" width="80%" class="img-e">
                 </div>
             </div>
         </div>
