--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
             align-items: center;
             background-color: transparent;
         }
-
+        .img-w {
+            width: 80%;
+            height: auto;
+        }
         .logo {
             font-size: 1.3rem;
             font-weight: 800;
@@ -227,7 +230,7 @@
                 </div>
             </div>
             <div class="images">
-                <img src="final.jpeg" alt="" width="80%" class="img-e">
+                <img src="final.jpeg" alt="" class="img-w">
                 </div>
             </div>
         </div>
