--- a/Sec2.html
+++ b/Sec2.html
@@ -433,7 +433,7 @@ li a:hover {
             </div>
             <div class="detail">
                 <h3>Hi, I'm</h3>
-                <h1><span style="color:#f9532d;"> Santhosh Varma Thamishetty</h1>
+                <h1><span style="color:#00E8F8;">Santhosh Varma Thamishetty</h1>
                 <p>A Cogitative Software Developer</p>
             <button>Contact Us</button>
             </div>
