--- a/Sec2.html
+++ b/Sec2.html
@@ -407,34 +407,15 @@ li a:hover {
     </header>
 
 
-    <section class="container">
-        <div class="main">
-            <div class="rounding-sec">
-                <div class="big-circle">
-                    <div class="icon-block">
-                        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjIHDQ_CU0W38ktREqnPwdVlGCdA_e4xbaDK9NrjFOpD2AqdcajDV3c9_R3vp034nrC9eyvMThwY8ifNpmH3_8GMg_SzAsLKcWQeSskaVl8HjVtLWilhcBNwfep0yRxq-Z_klBXoYTVX0BaE39VwJ2a-drZup5i8owkdaZF0-KhCaodrtN2Rii9HPZrdlk/s1600/github.png"
-                            alt="" />
-                    </div>
-                    <div class="icon-block">
-                       <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhoPvxJtYJq2-7BDn6LGcQ6QsT3Bo0vxkKu8WAOZnqsHIiTtGJqsHHHWlqqYN4iQFlVaqTaq7AFkWbY5Wrqxvk9Se1Wc_rjA7UKZoXHoxqSWXyaTg9aL9RC37H78NTnT4TwePdwqEYwVw8VxtjPoy6eG-f7RTJhX0JCa0lPmpfaz69hJ1ZHI9seBrUuvf4/s64/instagram.png"
-                            alt="" />
-                    </div>
-                    <div class="icon-block">
-                        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg-WWnXxgKNxwqarx8Vr_xpaCcwOQbv7bpFxWXy1o7DCq7jZNiT3CFdAo52AvJol-C-3InAzj6B4isdJVwVCAlUY9jxqgM43wDXrmfsqL4PGr-fsBG0YjcOzwAHFscoDXg3EGlhupxjKRwrMe7Y2bX9VzTc-RY95A03bV1avKnjwJZjh0HKbGZDEa73mPU/s1600/telegram.png"
-                            alt="" />
-                    </div>
-                    <div class="icon-block">
-                        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiejpFbnjtnjhErKo-66_ATecAMmYtSrLzQYdIRMRAxLHtgMUZKnA6jGJQsTMnrniZmMhTZydWkR-l2cpZcGEBGlI4Ptl9ogR-NSPF2wNO5FQdMlL_xaGHQfPnSRIh0Lg4JX0PJLjg9p-tAL9Y8qFbbuGIW3YoolXiMja2qujyDjcFPYGzsPu-RyHle2Jc/s1600/youtube.png" alt="" />
-                    </div>
-                </div>
-                <div class="images">
-                    <img src="final.jpeg" alt="" class="img-w">
-                </div>
-            </div>
             <div class="detail">
                 <h3>Hi, I'm</h3>
                 <h1><span style="color:#00E8F8;">Santhosh Varma Thamishetty</h1>
                 <p>A Cogitative Software Developer</p>
+                <div class="social">
+                    <a href="https://github.com/SanthoshVarmaThamishetty"><i class="bi bi-github"></i></a>
+                    <a href="https://www.instagram.com/santhosh_varma?igsh=MWJqcXc3NXRoM3V3ag%3D%3D&utm_source=qr"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/santhosh-varma-a59a4a1b0?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i class="bi bi-linkedin"></i></a>
+                </div>
             <button>Contact Us</button>
             </div>
         </div>
