--- a/Sec2.html
+++ b/Sec2.html
@@ -68,7 +68,21 @@ header {
     color: #fff;
     text-decoration: none;
 }
-
+.social a {
+    color: #00E8F8;
+    font-size: 1rem;
+    border: 1.6px solid #00E8F8;
+    border-radius: 50%;
+    padding: .35rem;
+    text-align: center;
+    width: 26px;
+}
+.social a:hover {
+    color: #1F252E;
+    background-color: #00E8F8;
+    box-shadow: 0 0 20px #00E8F8;
+    transition: all .3s ease-in-out;
+}
 ul {
     display: flex;
     gap: .6rem;
@@ -76,7 +90,6 @@ ul {
     background-color: transparent;
     overflow: hidden;
 }
-
 li a {
     display: inline-block;
     padding: .3rem 1rem;
