--- a/Sec2.html
+++ b/Sec2.html
@@ -68,21 +68,6 @@ header {
     color: #fff;
     text-decoration: none;
 }
-.social a {
-    color: #00E8F8;
-    font-size: 1rem;
-    border: 1.6px solid #00E8F8;
-    border-radius: 50%;
-    padding: .35rem;
-    text-align: center;
-    width: 26px;
-}
-.social a:hover {
-    color: #1F252E;
-    background-color: #00E8F8;
-    box-shadow: 0 0 20px #00E8F8;
-    transition: all .3s ease-in-out;
-}
 ul {
     display: flex;
     gap: .6rem;
@@ -448,12 +433,7 @@ li a:hover {
             <div class="detail">
                 <h3>Hi, I'm</h3>
                 <h1><span style="color:#00E8F8;">Santhosh Varma Thamishetty</h1>
-                <p>A Cogitative Software Developer</p>
-                <div class="social">
-                    <a href="https://github.com/SanthoshVarmaThamishetty"><i class="bi bi-github"></i></a>
-                    <a href="https://www.instagram.com/santhosh_varma?igsh=MWJqcXc3NXRoM3V3ag%3D%3D&utm_source=qr"><i class="bi bi-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/santhosh-varma-a59a4a1b0?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i class="bi bi-linkedin"></i></a>
-                </div>
+                <p>A Cogitative Software Developer</p
             <button>Contact Us</button>
             </div>
         </div>
