--- a/Sec2.html
+++ b/Sec2.html
@@ -425,7 +425,7 @@ li a:hover {
                     </div>
                 </div>
                 <div class="images">
-                    <img src="final.jpg" alt="" class="img-w">
+                    <img src="final.jpeg" alt="" class="img-w">
                 </div>
             </div>
 
