--- a/Sec2.html
+++ b/Sec2.html
@@ -396,7 +396,7 @@ li a:hover {
                 </div>
             </label>
             <ul>
-                <li><a href="#" class="active" style="--navAni:1">Home</a></li>
+                <li><a href="Sec2.html" class="active" style="--navAni:1">Home</a></li>
                 <li><a href="#" style="--navAni:2">About</a></li>
                 <li><a href="#" style="--navAni:3">Skills</a></li>
                 <li><a href="#" style="--navAni:4">Portfolio</a></li>
