--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         </label>
         <nav>
             <a href="#" class="active">Home</a>
-            <a href="Sec2.html">About</a>
+            <a href="index.html">About</a>
             <a href="#">Skills</a>
             <a href="#">Projects</a>
             <a href="#">Contact</a>
