--- a/Sec2.html
+++ b/Sec2.html
@@ -397,7 +397,7 @@ li a:hover {
             </label>
             <ul>
                 <li><a href="Sec2.html" class="active" style="--navAni:1">Home</a></li>
-                <li><a href="#" style="--navAni:2">About</a></li>
+                <li><a href="index.html" style="--navAni:2">About</a></li>
                 <li><a href="#" style="--navAni:3">Skills</a></li>
                 <li><a href="#" style="--navAni:4">Portfolio</a></li>
                 <li><a href="#" style="--navAni:5">Contact</a></li>
@@ -411,23 +411,23 @@ li a:hover {
             <div class="rounding-sec">
                 <div class="big-circle">
                     <div class="icon-block">
-                        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjIHDQ_CU0W38ktREqnPwdVlGCdA_e4xbaDK9NrjFOpD2AqdcajDV3c9_R3vp034nrC9eyvMThwY8ifNpmH3_8GMg_SzAsLKcWQeSskaVl8HjVtLWilhcBNwfep0yRxq-Z_klBXoYTVX0BaE39VwJ2a-drZup5i8owkdaZF0-KhCaodrtN2Rii9HPZrdlk/s1600/github.png"
+                        <img src=""
                             alt="" />
                     </div>
                     <div class="icon-block">
-                       <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhoPvxJtYJq2-7BDn6LGcQ6QsT3Bo0vxkKu8WAOZnqsHIiTtGJqsHHHWlqqYN4iQFlVaqTaq7AFkWbY5Wrqxvk9Se1Wc_rjA7UKZoXHoxqSWXyaTg9aL9RC37H78NTnT4TwePdwqEYwVw8VxtjPoy6eG-f7RTJhX0JCa0lPmpfaz69hJ1ZHI9seBrUuvf4/s64/instagram.png"
+                       <img src=""
                             alt="" />
                     </div>
                     <div class="icon-block">
-                        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg-WWnXxgKNxwqarx8Vr_xpaCcwOQbv7bpFxWXy1o7DCq7jZNiT3CFdAo52AvJol-C-3InAzj6B4isdJVwVCAlUY9jxqgM43wDXrmfsqL4PGr-fsBG0YjcOzwAHFscoDXg3EGlhupxjKRwrMe7Y2bX9VzTc-RY95A03bV1avKnjwJZjh0HKbGZDEa73mPU/s1600/telegram.png"
+                        <img src=""
                             alt="" />
                     </div>
                     <div class="icon-block">
-                        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiejpFbnjtnjhErKo-66_ATecAMmYtSrLzQYdIRMRAxLHtgMUZKnA6jGJQsTMnrniZmMhTZydWkR-l2cpZcGEBGlI4Ptl9ogR-NSPF2wNO5FQdMlL_xaGHQfPnSRIh0Lg4JX0PJLjg9p-tAL9Y8qFbbuGIW3YoolXiMja2qujyDjcFPYGzsPu-RyHle2Jc/s1600/youtube.png" alt="" />
+                        <img src="" alt="" />
                     </div>
                 </div>
                 <div class="images">
-                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhwX1hNs1uTxT4esqcM-g4cIPSSqGfCotsrSqPkI8aQMNoJMxECIOqHeVAPlGsSD6uEn7K5Fv_9m-vVdt4kaig7dInalmeBEnMUMbcFloJX3-y_lh6J8zz-PkIENB_1k8iAx5YEdP4FlBD0_U_JWbZC9TkP70Yd71hxULL5SbwvsZIen4_dtOOltgBpcGA/s1600/img_1.png" alt="" class="img-w">
+                    <img src="final.jpeg" alt="" class="img-w">
                 </div>
             </div>
             <div class="detail">
