--- a/Sec2.html
+++ b/Sec2.html
@@ -432,9 +432,9 @@ li a:hover {
             </div>
             <div class="detail">
                 <h3>Hi, I'm</h3>
-                <h1><span style="color:#f9532d;">Santhosh Varma</span>Thamishetty</h1>
-                <p>I'm a professional Web Developer. Our Main Goal to help & Satisficed the Local & Global Clients by web development solutions</p>
-            <button>Contact Us</button>
+                <h1><span style="color:#00E8F8;">Santhosh Varma</span>Thamishetty</h1>
+                <p>A Cogitative Software Developer. </p>
+            <button></button>
             </div>
         </div>
     </section>
