--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             </div>
         </label>
         <nav>
-            <a href="#" class="active">Home</a>
+            <a href="Sec2.html" class="active">Home</a>
             <a href="index.html">About</a>
             <a href="#">Skills</a>
             <a href="#">Projects</a>
