--- a/Sec2.html
+++ b/Sec2.html
@@ -201,24 +201,24 @@ li a:hover {
   }
   .icon-block:first-child {
     top: 0;
-    left: 50%;
+    left: 0;
     transform: translate(-50%, -50%);
     -webkit-transform: translate(-50%, -50%);
   }
   .icon-block:nth-child(2) {
-    top: 50%;
+    top: 0;
     right: 0;
     transform: translate(50%, -50%);
     -webkit-transform: translate(50%, -50%);
   }
   .icon-block:nth-child(3) {
     bottom: 0;
-    left: 50%;
+    left: 0;
     transform: translate(-50%, 50%);
     -webkit-transform: translate(-50%, 50%);
   }
   .icon-block:nth-child(4) {
-    top: 50%;
+    top: 0;
     left: 0;
     transform: translate(-50%, -50%);
     -webkit-transform: translate(-50%, -50%);
