--- a/Sec2.html
+++ b/Sec2.html
@@ -403,7 +403,7 @@ li a:hover {
             </div>
             <div class="detail">
                 <h3>Hi, I'm</h3>
-                <h1><span style="color:#00E8F8;">Santhosh Varma</span>Thamishetty</h1>
+                <h1><span style="color:#00E8F8;">Santhosh Varma Thamishetty</h1>
                 <p>A Cogitative Software Developer. </p>
             <button></button>
             </div>
