--- a/Sec2.html
+++ b/Sec2.html
@@ -151,11 +151,12 @@ li a:hover {
 }
 .images {
     margin-left: auto;
-    width: 300px;
+    align-self: flex-start;
+    width: 200px;
 }   
 .images img {
-    border-radius: 50%;
-    box-shadow: 0 0 10px #D1D9E6;
+    border-radius: 20%;
+    box-shadow: 3 3 10px #D1D9E6;
 }
 
 /* Section 1 End */
