--- a/Sec2.html
+++ b/Sec2.html
@@ -150,13 +150,17 @@ li a:hover {
     cursor: pointer;
 }
 .images {
-    margin-left: auto;
+    margin-right: auto;
+    margin: 0;
+    display: flex;
+    justify-content: flex-start; 
+    align-items: center;
     align-self: flex-start;
-    width: 200px;
+    width: 300px;
 }   
 .images img {
-    border-radius: 20%;
-    box-shadow: 3 3 10px #D1D9E6;
+    border-radius: 50%;
+    box-shadow: 1 1 10px #D1D9E6;
 }
 
 /* Section 1 End */
