--- a/Sec2.html
+++ b/Sec2.html
@@ -159,8 +159,10 @@ li a:hover {
     width: 300px;
 }   
 .images img {
-    border-radius: 50%;
-    box-shadow: 1 1 10px #D1D9E6;
+    border-radius: 30%;
+    box-shadow: 2 2 10px #D1D9E6;
+    margin-right: auto;
+    
 }
 
 /* Section 1 End */
