--- a/Sec2.html
+++ b/Sec2.html
@@ -166,7 +166,29 @@ li a:hover {
 }
 
 /* Section 1 End */
+.social {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 1.4rem;
+            margin-top: 1.7rem;
+        }
 
+        .social a {
+            color: #00E8F8;
+            font-size: 1rem;
+            border: 1.6px solid #00E8F8;
+            border-radius: 50%;
+            padding: .35rem;
+            text-align: center;
+            width: 26px;
+        }
+
+        .social a:hover {
+            color: #1F252E;
+            background-color: #00E8F8;
+            box-shadow: 0 0 20px #00E8F8;
+            transition: all .3s ease-in-out;
+        }
 /* Roundin sec */
   .main {
     position: relative;
@@ -174,10 +196,9 @@ li a:hover {
  
   .images {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
+    top: 10%;
+    left: 10%;
+    
   }
   /* keyframe animation */
   
