--- a/Sec2.html
+++ b/Sec2.html
@@ -36,7 +36,7 @@ body {
 }
 
 .img-w {
-    width: auto;
+    width: 200%;
     height: auto;
 }
 /* Nav */
@@ -159,8 +159,8 @@ li a:hover {
     width: 300px;
 }   
 .images img {
-    border-radius: 30%;
-    box-shadow: 2 2 10px #D1D9E6;
+    border-radius: 50%;
+    box-shadow: 1 1 10px #D1D9E6;
     margin-right: auto;
     
 }
@@ -196,8 +196,8 @@ li a:hover {
  
   .images {
     position: absolute;
-    top: 20%;
-    left: 30%;
+    top: 10%;
+    left: 10%;
     
   }
   /* keyframe animation */
