--- a/Sec2.html
+++ b/Sec2.html
@@ -401,7 +401,7 @@ li a:hover {
                 <h1><span style="color:#00E8F8;">Santhosh Varma Thamishetty</h1>
                 <p>A Cogitative Software Developer. </p>
             <div class="social">
-                    <a href="https://github.com/SanthoshVarmaThamishetty"><i class="bi bi-github"></i></a>
+                    <a href="https://wa.me/14168319104"><i class="bi bi-whatsapp"></i></a>
                     <a href="https://www.instagram.com/santhosh_varma?igsh=MWJqcXc3NXRoM3V3ag%3D%3D&utm_source=qr"><i class="bi bi-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/santhosh-varma-a59a4a1b0?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i class="bi bi-linkedin"></i></a>
                 </div>
