--- a/Sec2.html
+++ b/Sec2.html
@@ -352,7 +352,7 @@ li a:hover {
     <header class="container">
         <div class="page-header">
             <div class="logo">
-                <a href="#">Logo.</a>
+                 <img src="Logo.jpeg" alt="" />
             </div>
             <input type="checkbox" id="click">
 
@@ -374,24 +374,7 @@ li a:hover {
 
     <section class="container">
         <div class="main">
-            <div class="rounding-sec">
-                <div class="big-circle">
-                    <div class="icon-block">
-                        <img src=""
-                            alt="" />
-                    </div>
-                    <div class="icon-block">
-                       <img src=""
-                            alt="" />
-                    </div>
-                    <div class="icon-block">
-                        <img src=""
-                            alt="" />
-                    </div>
-                    <div class="icon-block">
-                        <img src="" alt="" />
-                    </div>
-                </div>
+           
                 <div class="images">
                     <img src="final.jpeg" alt="" class="img-w">
                 </div>
