--- a/Sec2.html
+++ b/Sec2.html
@@ -374,7 +374,24 @@ li a:hover {
 
     <section class="container">
         <div class="main">
-           
+            <div class="rounding-sec">
+                <div class="big-circle">
+                    <div class="icon-block">
+                        <img src=""
+                            alt="" />
+                    </div>
+                    <div class="icon-block">
+                       <img src=""
+                            alt="" />
+                    </div>
+                    <div class="icon-block">
+                        <img src=""
+                            alt="" />
+                    </div>
+                    <div class="icon-block">
+                        <img src="" alt="" />
+                    </div>
+                </div>
                 <div class="images">
                     <img src="final.jpeg" alt="" class="img-w">
                 </div>
