--- a/Sec2.html
+++ b/Sec2.html
@@ -352,8 +352,8 @@ li a:hover {
     <header class="container">
         <div class="page-header">
             <div class="logo">
-                <a href="#"> Welcome.</a>
-                 <img src="Logo.jpeg" alt="" />
+                <a href="#"> Welcome </a>
+                 
             </div>
             <input type="checkbox" id="click">
 
