--- a/Sec2.html
+++ b/Sec2.html
@@ -352,6 +352,7 @@ li a:hover {
     <header class="container">
         <div class="page-header">
             <div class="logo">
+                <img src="Logo.jpg" alt="Your Logo">
                 <a href="#"> Welcome </a>
                  
             </div>
