--- a/Sec2.html
+++ b/Sec2.html
@@ -56,6 +56,10 @@ header {
     align-items: center;
     padding: 1rem 0;
 }
+img-l {
+    width: 50px; /* Set the desired width */
+    height: auto; /* Maintain aspect ratio */
+}
 
 .logo {
     font-size: 1.5rem;
@@ -352,7 +356,7 @@ li a:hover {
     <header class="container">
         <div class="page-header">
             <div class="logo">
-                <img src="Logo.jpg" alt="Your Logo">
+                <img-l src="Logo.jpg" alt="Your Logo">
                 <a href="#"> Welcome </a>
                  
             </div>
