--- a/Sec2.html
+++ b/Sec2.html
@@ -356,7 +356,7 @@ li a:hover {
     <header class="container">
         <div class="page-header">
             <div class="logo">
-                <img-l src="Logo.jpg" alt="Your Logo">
+                <img src="Logo.jpg" alt="" class="img-w">
                 <a href="#"> Welcome </a>
                  
             </div>
