--- a/Sec2.html
+++ b/Sec2.html
@@ -57,8 +57,8 @@ header {
     padding: 1rem 0;
 }
 img-l {
-    width: 50px; /* Set the desired width */
-    height: auto; /* Maintain aspect ratio */
+    width: 20px; /* Set the desired width */
+    height: 20px; /* Maintain aspect ratio */
 }
 
 .logo {
