--- a/Sec2.html
+++ b/Sec2.html
@@ -57,8 +57,8 @@ header {
     padding: 1rem 0;
 }
 img-l {
-    width: 20px; /* Set the desired width */
-    height: 20px; /* Maintain aspect ratio */
+    width: 2px; /* Set the desired width */
+    height: 2px; /* Maintain aspect ratio */
 }
 
 .logo {
@@ -357,7 +357,7 @@ li a:hover {
         <div class="page-header">
             <div class="logo">
                 <img src="Logo.jpg" alt="" class="img-w">
-                <a href="#"> Welcome </a>
+                <a href="#"></a>
                  
             </div>
             <input type="checkbox" id="click">
