--- a/Sec2.html
+++ b/Sec2.html
@@ -59,6 +59,11 @@ img-l {
     width: 0.05px; /* Set the desired width */
     height: 0.05px; /* Maintain aspect ratio */
 }
+        img-w {
+    width: 0.05px; /* Set the desired width */
+    height: 0.05px; /* Maintain aspect ratio */
+}
+        
 
 .logo {
     font-size: 1.5rem;
@@ -71,6 +76,7 @@ img-l {
     color: #fff;
     text-decoration: none;
 }
+        
 
 ul {
     display: flex;
