--- a/Sec2.html
+++ b/Sec2.html
@@ -414,7 +414,7 @@ li a:hover {
             <div class="social">
                     <a href="https://wa.me/14168319104"><i class="bi bi-whatsapp"></i></a>
                     <a href="https://www.instagram.com/santhosh_varma?igsh=MWJqcXc3NXRoM3V3ag%3D%3D&utm_source=qr"><i class="bi bi-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/santhosh-varma-a59a4a1b0?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i class="bi bi-linkedin"></i></a>
+                    <a href="www.linkedin.com/in/santhosh-varma-thamishetty"><i class="bi bi-linkedin"></i></a>
                 </div>
             </div>
         </div>
